--- a/CrudCovid/src/components/Footer.css
+++ b/CrudCovid/src/components/Footer.css
@@ -1,11 +1,96 @@
-/* src/components/Footer.css */
+/* Asegúrate de que el body y el html ocupen toda la altura de la ventana */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Esto asegura que el footer se quede en la parte inferior */
 .footer {
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 10px 0;
-  position: fixed;
+  padding: 2px 0;
   width: 100%;
-  bottom: 0;
   z-index: 1000;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #444;
+}
+
+.footer-column {
+  flex: 1;
+  margin: 10px;
+  max-width: 300px;
+  text-align: left;
+}
+
+.footer-logo {
+  height: 200px;
+  margin-bottom: 20px;
+}
+
+.footer-column h4 {
+  margin-bottom: 10px;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-column ul li {
+  margin: 5px 0;
+}
+
+.footer-column ul li a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-column ul li a:hover {
+  color: #007bff;
+}
+
+.footer-column p a {
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-column p a:hover {
+  color: #0056b3;
+}
+
+.footer-bottom {
+  padding-top: 10px;
+}
+
+.footer-bottom p {
+  margin: 5px 0;
+}
+
+/* Media Queries para dispositivos móviles */
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-column {
+    max-width: 100%;
+    text-align: center;
+  }
 }
